[project.scripts]
caching-proxy = "proxy:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="CachingProxy"
version="1.0.0"
readme="readme.md"
requires-python = ">=3.10"
dependencies = [
  "Flask==3.0.3",
  "requests==2.32.3",
  "typing_extensions==4.12.2",
  "typer==0.12.5"
]
